assets/scss/pages/_single-course.scss
/* ... */
.masteriyo-item--wrap {
	display: flex;
	flex-wrap: wrap;

	.masteriyo-single-course-item {
		display: flex;
	}
}

.course-reviews {
	padding: 0 $spacing_32px $spacing_32px;

	.masteriyo-course-reviews-list {
		.masteriyo-course-review__content {
			display: flex;
			flex-wrap: nowrap;
			justify-content: space-between;
			border: none;
			width: 100%;

			.masteriyo-right {
				flex-basis: 90%;
				margin-left: $spacing_18px;

				&__rating {
					display: flex;
					align-items: flex-end;
					justify-content: space-between;

					.rating {
						margin-bottom: $spacing_14px;

						.masteriyo-rstar {
							display: flex;
							flex-wrap: wrap;

							svg {
								width: 14px;
								height: 14px;
								fill: var(--masteriyo-color-golden);
							}
						}
					}
				}

				.author-name {
					margin-right: $spacing_16px;
					font-size: 14px;
					font-weight: 500;
					text-transform: capitalize;
					line-height: 16px;
				}

				.date-created {
					font-size: 12px;
					line-height: 14px;
				}

				.title {
					font-size: 16px;
					font-weight: 700;
					line-height: 19px;
					margin-top: $spacing_16px;
					margin-bottom: $spacing_8px;
				}

				.content {
					font-size: 16px;
					line-height: 27px;
				}
			}
		}
	}

	.masteriyo-review {
		border-top: 1px solid var(--masteriyo-color-border);
		margin-top: $spacing_24px;
		padding-top: $spacing_24px;

		.masteriyo-avatar {
			img {
				width: 50px;
				height: 50px;
				overflow: hidden;
				border-radius: $border_radius_50pct;
				border: 2px solid rgba(0, 0, 0, 0.1);
			}
		}
	}

	.masteriyo-login-msg.masteriyo-submit-container {
		display: flex;
		width: 100%;
		align-items: center;
		justify-content: center;
		padding-top: $spacing_24px;
		margin-top: $spacing_40px;

		p {
			margin-bottom: 0;
		}
	}

	.masteriyo-link-login {
		margin: 0 $spacing_4px;
	}
}

// Review form.
.masteriyo-submit-container {
	.masteriyo--title {
		margin-top: $spacing_60px;
		margin-bottom: $spacing_16px;
		font-size: 24px;
		font-weight: 500;
	}

	.masteriyo-rating {
		margin-top: 14px;
	}

	.masteriyo-btn-primary {
		margin-top: $spacing_16px;
	}

	.masteriyo-stab-rs {
		margin-top: 0;
	}
}

.masteriyo-reply-course-review {
	font-size: 14px;
	font-weight: 600;
	line-height: 16px;
	color: var(--masteriyo-color-primary);
	margin-top: $spacing_16px;
	display: block;
	text-decoration: underline;
	cursor: pointer;
}

.masteriyo-replies {
	display: flex;
	flex-flow: unset;
	flex-direction: row;

	.masteriyo-reply-replies--title {
		.masteriyo-flex {
			align-items: center;
		}

		.author-name {
			margin-right: $spacing_16px;
			font-size: 14px;
			font-weight: 500;
			text-transform: capitalize;
			line-height: 16px;
		}
	}
}

.masteriyo-reply-replies {
	width: 100%;

	.masteriyo-right {
		margin-left: $spacing_24px;
		width: 100%;

		.content {
			font-size: 16px;
		}

		.masteriyo-reply-replies--title {
			display: flex;
			justify-content: space-between;
			align-items: center;
		}

		.date-created {
			font-size: 12px;
			line-height: 14px;
		}
	}
}

.masteriyo-course-review-replies {
	width: 90%;
	float: right;
	margin-bottom: $spacing_24px;
}

.masteriyo-country-dropdown {
	display: flex;
	width: 100%;
	height: 42.16px;

	select {
		border: 1px solid #dee2e6;
		padding-top: 0;
		padding-bottom: 0;
	}
}

.masteriyo-login-msg {
	border-top: 2px solid var(--masteriyo-color-border);
}

// Overlay
.masteriyo-overlay {
	position: fixed;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.192);
	display: flex;
	justify-content: center;
	align-items: center;
}

